--- a/package.json
+++ b/package.json
@@ -9,7 +9,17 @@
   },
   "author": "Aaron.Jin",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "body-parser": "^1.12.4",
+    "cheerio": "^0.19.0",
+    "express": "^4.12.3",
+    "mongoose": "^4.0.2",
+    "multer": "^0.1.8",
+    "request": "^2.55.0",
+    "superagent": "^1.2.0",
+    "tingodb": "^0.3.4",
+    "tungus": "0.0.4"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cdn": "^0.6.5",
@@ -19,8 +29,10 @@
     "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-cssmin": "^0.10.0clear",
     "grunt-contrib-htmlmin": "^0.3.0",
+    "grunt-contrib-livereload": "^0.1.2",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-express-server": "^0.5.1",
     "grunt-filerev": "^2.0.0",
     "grunt-html2js": "^0.3.2",
