--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tungus": "0.0.4"
   },
   "devDependencies": {
+    "node-bourbon": "^4.2.3",
     "grunt": "^0.4.5",
     "grunt-cdn": "^0.6.5",
     "grunt-contrib-clean": "^0.6.0",
@@ -29,6 +30,7 @@
     "grunt-contrib-copy": "^0.6.0",
     "grunt-contrib-cssmin": "^0.10.0clear",
     "grunt-contrib-htmlmin": "^0.3.0",
+    "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-livereload": "^0.1.2",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.6.0",
